--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,16 +3,29 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["plugin:react/recommended", "airbnb", "prettier"],
+  "extends": [
+    "airbnb",
+    "airbnb-typescript",
+    "prettier",
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended"
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
     },
     "ecmaVersion": 2020,
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": "./tsconfig.json"
   },
-  "plugins": ["react", "@typescript-eslint", "prettier", "import"],
+  "plugins": [
+    "react",
+    "@typescript-eslint",
+    "prettier",
+    "import",
+    "simple-import-sort"
+  ],
   "rules": {
     "prettier/prettier": "error",
     "no-use-before-define": "off",
@@ -49,28 +62,9 @@
         "unnamedComponents": "arrow-function"
       }
     ],
-    // "jsx-a11y/click-events-have-key-events": "off",
-    // "jsx-a11y/interactive-supports-focus": "off",
-    // "jsx-a11y/label-has-associated-control": [
-    //   "error",
-    //   {
-    //     "required": {
-    //       "some": ["nesting", "id"]
-    //     }
-    //   }
-    // ],
-    // "jsx-a11y/label-has-for": [
-    //   "error",
-    //   {
-    //     "required": {
-    //       "some": ["nesting", "id"]
-    //     }
-    //   }
-    // ],
     "react/jsx-props-no-spreading": "off",
     "no-unused-vars": "off",
-    //    TODO: reinsert it once setup is complete
-    //    "@typescript-eslint/no-unused-vars": ["error"],
+    "@typescript-eslint/no-unused-vars": ["error"],
     "no-shadow": "off",
     "react/button-has-type": "off",
     "default-param-last": "off",
