--- a/package.json
+++ b/package.json
@@ -12,35 +12,35 @@
     "pre-commit": "lint-staged"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sass": "^1.49.9"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.33",
+    "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.3.1",
-    "@typescript-eslint/parser": "^5.3.1",
-    "@vitejs/plugin-react": "^1.0.7",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.1",
-    "eslint": "^8.9.0",
+    "eslint": "^8.12.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^16.1.4",
+    "eslint-config-airbnb-typescript": "^16.2.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.1.2",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": "^7.0.0",
-    "lint-staged": "^11.1.2",
+    "lint-staged": "^12.3.7",
     "postcss": "^8.4.5",
-    "prettier": "^2.5.1",
+    "prettier": "^2.6.2",
+    "sass": "^1.49.11",
     "tailwindcss": "^3.0.11",
-    "typescript": "^4.4.4",
-    "vite": "^2.7.2",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.1",
     "vite-tsconfig-paths": "^3.3.17"
   },
   "husky": {
