Add engines definition to package.json

--- a/package.json
+++ b/package.json
@@ -54,5 +54,9 @@
       "yarn run prettify",
       "git add --force"
     ]
+  },
+  "engines": {
+    "npm": "8.19.2",
+    "node": "18.12.1"
   }
 }
